css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
    box-sizing: border-box;
    -moz-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
}

h2 {
    color: orange;
}

.body-copy {
    max-width: 800px;
    text-align: center;
    margin: 0 auto;
}

.header {
    background-color: #2F398D;
}

h1 {
    color: orange;
    text-align: center;
    font-family: sans-serif;
}

.logo {
    width: 90px;
    padding-top: 10px;
    padding-left: 20px;
}

.nav-bars {
    height: 90px;
}

.nav {
    list-style: none;
    margin: 0;
    float: right;
    padding-top: 6px;
    padding-right: 50px;
}

.nav li {
    margin: 0;
    display: inline-block;
}

.nav a,
.nav a:link,
.nav a:visited {
    display: block;
    color: black;
    text-decoration: none;
}

.nav a:hover,
.nav a:focus,
.nav a:active,
.nav .nav-current,
.nav .nav-current:link,
.nav .nav-current:visited {
    color: orange;
}

.navigation {
    background-color: white;
    width: 100vw;
    margin: 0;
    padding: 0;
    font-size-adjust: auto;
    font-size: 1.5em;
    top: 0;
    z-index: 1000;
    overflow: hidden;
}

.background {
    background-image: url(../images/ocean.svg);
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    overflow: hidden;
    z-index: 1;
    width: 100%;
    padding-top: 10%;
    padding-bottom: 20%;
    bottom: 0;
}

.scrolldown {
    width: 5%;
    position: relative;
    left: 48%;
    top: 80px;
}

.seahorse {
    width: 20%;
    position: relative;
    left: 40%;
    top: 30px;
    -webkit-animation: seahorse-appear 3s ease forwards infinite ;
    animation: seahorse-appear 3s ease forwards infinite ;
}

@-webkit-keyframes seahorse-appear {
    
    90% {
        -webkit-transform: translateY(0px) rotate(0deg);
    }
    
    80% {
        -webkit-transform: translate(42%,-18%) rotate(5deg);
    }
    
     90% {
        -webkit-transform: translateY(0px) rotate(0deg);
    }
    
    80% {
        -webkit-transform: translateY(0px) rotate(5deg);
    }
 
}

@keyframes seahorse-appear {
    
    90% {
        transform: translateY(0px) rotate(0deg);
    }
    
    80% {
        transform: translate(42%,-33%) rotate(5deg);
    }
   
    90% {
        transform: translateY(0px) rotate(0deg);
    }
    
     80% {
        transform: translateY(0px) rotate(5deg);
    }
 
}

.bubbles {
    width: 5%;
    position: absolute;
    bottom: 0;
    left: 11%;
    -webkit-animation: bubbles 2s ease-in-out infinite alternate;
    animation: bubbles 2s ease-in-out infinite alternate;
}

.bubbles2 {
    width: 5%;
    position: absolute;
    bottom: 0;
    left: 80%;
    -webkit-animation: bubbles 2s ease-in-out infinite alternate;
    animation: bubbles 2s ease-in-out infinite alternate;
}


@-webkit-keyframes bubbles {
    
    0% {
        -webkit-transform: translate(0,-100%);
    }
    
    100% {
        -webkit-transform: translate(0,-190%);
    }
}

@keyframes bubbles {
    
    0% {
        transform: translate(0,-100%);
    }
    
    100% {
        transform: translate(0,-190%);
    }
}

.btn-expand {
    height: 50px;
    width: 57px;
    float: right;
    padding-top: 20px; 
    padding-right: 20px;
}   

.panel {
    max-height: 0;
    overflow: hidden;
    transition: all 200ms linear;
}

.js-panel-expand {
    max-height: 10em;
}

@media only screen and (min-width: 60em) {
    
    max-height: 40px;

}   

.photo {
    background: url("../images/underwater-ocean-wallpaper-1920x1200-elphstone%20reef%20221.jpg") center center / cover no-repeat;
    padding-top: 50%;
    position: relative;
}

.photo2 {
    background: url("../images/o-WORLD-OCEANS-DAY-2013-facebook.jpg") center center / cover no-repeat;
    padding-top: 50%;
    position: relative;
}

.blowfish {
  height: 100px;
  display: inline-block;
  top: calc(50% - 40px);
  width: 80px;
  background-image: url(../images/blowfish.svg);
  background-repeat: no-repeat;
  opacity: 0;
  -webkit-transition: all 200ms linear; 
  transition: all 200ms linear;    
}

.js-show-hide {
    opacity: 1;
}

.btn-show-hide {
    height: 34px;
    background-color: #4CA0BA;
    font-family: 'Chewy', cursive;
    color: white;
    border: none;
}

.btn-rotate {
    height: 34px;
    background-color: #4CA0BA;
    font-family: 'Chewy', cursive;
    color: white;
    border: none;
}

.btn-rotate2 {
    height: 34px;
    background-color: #4CA0BA;
    font-family: 'Chewy', cursive;
    color: white;
    border: none;
}

.blowfishblue {
  height: 80px;
  right: 2em;
  top: calc(50% - 40px);
  width: 80px;
  display: inline-block;
  background-image: url(../images/blowfishblue.svg);
  background-repeat: no-repeat;   
  z-index: 100;
  -webkit-transition: all 200ms linear; 
  transition: all 200ms linear;     
}

.js-rotate {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.blowfishgreen {
  height: 80px;
  right: 2em;
  top: calc(50% - 40px);
  width: 80px;
  display: inline-block;
  background-image: url(../images/blowfishgreen.svg);
  background-repeat: no-repeat;   
  z-index: 100;
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

.js-rotate-left {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
}

.scrollup {
    width: 5%;
    position: relative;
    left: 48%;
    top: 200px;
}

 .st0 {
     fill:#F79421;
 } 

.st1 {
    fill:#FFFFFF;
}

.spinstar {
    width: 150px;
    position: relative;
    left: 40%;
    top: 10px;
    margin: none;
}

.js-active #starfish {
    -webkit-animation: starfish-rotate 3s ease infinite ;
    animation: starfish-rotate 3s ease infinite ;
}

@keyframes starfish-rotate {
    
    0% {
        transform: rotate(0deg);
    }
    
    100% {
        transform: rotate(360deg);
    }
}  

@-webkit-keyframes starfish-rotate {
    
    0% {
        -webkit-transform: rotate(0deg);
    }
    
    100% {
        -webkit-transform: rotate(360deg);
    }
}  

.jelly {
    width: 150px;
    position: relative;
    left: 40%;
    top: 10px;
    margin: none;
}   

@media only screen and (max-width: 30em) {
    
}

